# midirun-config

./: LICENSE  README.md  create_udev_rule.sh  meson.build  post_install.sh
.cache/clangd/index/: devicedropdown.cpp.D16A40C3F25EBAC8.idx  devicedropdown.hpp.2722CAA4A83E0EA8.idx  getkeycode.cpp.750FC93DDC965E5F.idx  getkeycode.hpp.802DDC8E2BB21428.idx  labeledentrybox.cpp.A5DA331C4FD96B75.idx  labeledentrybox.hpp.1B183CF63F822268.idx  main.cpp.530D193B86817B7F.idx  mainwindow.cpp.A04CEE8D999B3AB3.idx  mainwindow.hpp.F0761FD135B2775C.idx  midilisten.hpp.22CB2407D86BABA1.idx  window.cpp.8DBCDC770AA82AE1.idx
data/: midirun-config.desktop.in  style.css
data/udev/: 99-midirun-config.rules
include/: configentry.hpp  devicedropdown.hpp  getkeycode.hpp  labeledentrybox.hpp  mainwindow.hpp  mappingentry.hpp  midilisten.hpp  statusbar.hpp
src/: devicedropdown.cpp  getkeycode.cpp  labeledentrybox.cpp  main.cpp  mainwindow.cpp  mappingentry.cpp  statusbar.cpp
